--- a/core/templates/cotton/preline/example/hero/starter.html
+++ b/core/templates/cotton/preline/example/hero/starter.html
@@ -6,7 +6,7 @@
       <div class="flex items-center justify-center h-screen  max-w-2xl text-center mx-auto">
         <h1 class="block font-bold text-gray-800 text-4xl md:text-5xl lg:text-6xl dark:text-neutral-200">
           Let's Build
-          <span class="bg-clip-text bg-gradient-to-tl from-blue-600 to-violet-600 text-transparent">Together</span>
+          <span class="bg-clip-text bg-gradient-to-tl from-blue-600 to-violet-600 text-transparent">{{content}}</span>
         </h1>
       </div>
       <!-- End Title -->
